--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/guffti/shark.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Gufftáv Ffápa hivataloff weboldala"/><link rel="apple-touch-icon" href="/guffti/shark.png"/><link rel="manifest" href="/guffti/manifest.json"/><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap" rel="stylesheet"><title>Guffti Weboldala</title><script defer="defer" src="/guffti/static/js/main.b014c64b.js"></script><link href="/guffti/static/css/main.ce2f63fe.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/shark.png" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Gufftáv Ffápa hivataloff weboldala" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/shark.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap"
+      rel="stylesheet"
+    />
+    <title>Guffti Weboldala</title>
+    <script
+      defer="defer"
+      src="%PUBLIC_URL%/static/js/main.b014c64b.js"
+    ></script>
+    <link href="%PUBLIC_URL%/static/css/main.ce2f63fe.css" rel="stylesheet" />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
