--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/shark.png" />
+    <link rel="icon" href="/shark.png" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Gufftáv Ffápa hivataloff weboldala" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/shark.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="/shark.png" />
+    <link rel="manifest" href="/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,11 +15,8 @@
       rel="stylesheet"
     />
     <title>Guffti Weboldala</title>
-    <script
-      defer="defer"
-      src="%PUBLIC_URL%/static/js/main.b014c64b.js"
-    ></script>
-    <link href="%PUBLIC_URL%/static/css/main.ce2f63fe.css" rel="stylesheet" />
+    <script defer="defer" src="/static/js/main.b014c64b.js"></script>
+    <link href="/static/css/main.ce2f63fe.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
