Reverted even more

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Gufftáv Ffápa hivataloff weboldala" />
     <link rel="apple-touch-icon" href="/shark.png" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/guffti/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,8 +15,8 @@
       rel="stylesheet"
     />
     <title>Guffti Weboldala</title>
-    <script defer="defer" src="/static/js/main.b014c64b.js"></script>
-    <link href="/static/css/main.ce2f63fe.css" rel="stylesheet" />
+    <script defer="defer" src="/guffti/static/js/main.b014c64b.js"></script>
+    <link href="/guffti/static/css/main.ce2f63fe.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
