--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/shark.png" />
+    <link rel="icon" href="/guffti/shark.png" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Gufftáv Ffápa hivataloff weboldala" />
-    <link rel="apple-touch-icon" href="/shark.png" />
+    <link rel="apple-touch-icon" href="/guffti/shark.png" />
     <link rel="manifest" href="/guffti/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
